# Pi---Poliedro-flashcards

./: CMakeLists.txt  ChamadaBancoTeste.cpp  README.md  terminalUI.cpp
Banco/: ChamadaBanco.cpp  ChamadaBanco.h  PonteBackFront.cpp  PonteBackFront.h  TesteBanco.cpp  banco.db
FlashCards/: CMakeLists.txt  FlashCard.qmlproject  FlashCard.qmlproject.qtds  FlashCard.qmlproject.qtds.337ce82  qds.cmake
FlashCards/App/: main.cpp
FlashCards/App/autogen/: environment.h
FlashCards/Banco/: PonteBackFront.h
FlashCards/Config/: DefaultEngine.ini  DefaultGame.ini
FlashCards/Content/: FlashCard.umap  Início.uasset  TelaInicio.uasset  TelaMateria.uasset  TelaSaida.uasset
FlashCards/FlashCard/: CMakeLists.txt  Constants.qml  qmldir
FlashCards/FlashCardContent/: App.qml  CMakeLists.txt  CriaEditaFlashcard.ui.qml  HistoricoGeral.ui.qml  TelaCriaEditaFlashcard.qml  TelaCriaEditaGeral.qml  TelaCriaEditaGeral.ui.qml  TelaHistoricoGeral.qml  TelaInicio.qml  TelaInicio.ui.qml  TelaJogando.qml  TelaPergunta.qml  TelaPergunta.qml.autosave  TelaPopUpSair.qml  TelaPopUpSair.ui.qml  TelaResposta.qml  TelaResposta.qml.autosave
FlashCards/Saved/Autosaves/: PackageRestoreData.json
FlashCards/Saved/Autosaves/Game/: Início_Auto1.uasset  Início_Auto2.uasset  Início_Auto3.uasset  Início_Auto4.uasset  Início_Auto5.uasset  Início_Auto8.uasset  NewWidgetBlueprint_Auto0.uasset  NewWidgetBlueprint_Auto1.uasset  NewWidgetBlueprint_Auto2.uasset  NewWidgetBlueprint_Auto3.uasset  NewWidgetBlueprint_Auto4.uasset  NewWidgetBlueprint_Auto5.uasset  NewWidgetBlueprint_Auto6.uasset  NewWidgetBlueprint_Auto7.uasset  NewWidgetBlueprint_Auto8.uasset  NewWidgetBlueprint_Auto9.uasset  TelaInicio_Auto2.uasset  TelaMateria_Auto1.uasset  TelaMateria_Auto2.uasset  TelaMateria_Auto3.uasset  TelaSaida_Auto1.uasset  TelaSaida_Auto2.uasset
FlashCards/Saved/Config/: ConsoleHistory.ini
FlashCards/Saved/Config/WindowsEditor/: EditorPerProjectUserSettings.ini
FlashCards/Saved/Crashes/UECC-Windows-D7F839B74190003F135B389017C1FA66_0000/: CrashContext.runtime-xml  UEMinidump.dmp
FlashCards/Saved/ShaderDebugInfo/PCD3D_SM5/WorldGridMaterial_6f0e152f210315b1/Default/: DDCKey-Editor.txt
FlashCards/Saved/ShaderDebugInfo/PCD3D_SM6/WorldGridMaterial_c1ff929ae6e37fb4/Default/: DDCKey-Editor.txt
FlashCards/Saved/SourceControl/: UncontrolledChangelists.json
Flashcard/: CriaBanco.sql  Dificuldade.cpp  Dificuldade.h  Flashcard.cpp  Flashcard.h  Flashcard.pro  FlashcardDAO.cpp  FlashcardDAO.h  FlashcardService.cpp  FlashcardService.h  SQLiteConnection.cpp  SQLiteConnection.h  banco.db  criaBancoNovo.sql  main.cpp
